--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
+    "@hookform/resolvers": "latest",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -46,48 +46,51 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
-    "next-themes": "^0.4.4",
+    "next-themes": "latest",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
-    "react-hook-form": "^7.54.1",
+    "react-hook-form": "latest",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1",
-    "pg": "latest",
-    "gel": "latest",
+    "zod": "latest",
+    "@aws-sdk/client-rds-data": "latest",
+    "@cloudflare/workers-types": "latest",
+    "@electric-sql/pglite": "latest",
+    "@libsql/client": "latest",
+    "@libsql/client-wasm": "latest",
+    "@neondatabase/serverless": "latest",
+    "@op-engineering/op-sqlite": "latest",
+    "@opentelemetry/api": "latest",
+    "@planetscale/database": "latest",
+    "@prisma/client": "latest",
+    "@tidbcloud/serverless": "latest",
+    "@types/better-sqlite3": "latest",
+    "@types/pg": "latest",
+    "@types/sql.js": "latest",
+    "@vercel/postgres": "latest",
+    "@xata.io/client": "latest",
+    "better-sqlite3": "latest",
+    "bun-types": "latest",
+    "expo-sqlite": "latest",
     "knex": "latest",
     "kysely": "latest",
     "mysql2": "latest",
+    "pg": "latest",
+    "postgres": "latest",
     "sql.js": "latest",
     "sqlite3": "latest",
-    "postgres": "latest",
-    "@types/pg": "latest",
-    "bun-types": "latest",
-    "expo-sqlite": "latest",
-    "@types/sql.js": "latest",
-    "@libsql/client": "latest",
-    "@prisma/client": "latest",
-    "better-sqlite3": "latest",
-    "@xata.io/client": "latest",
-    "@vercel/postgres": "latest",
-    "@opentelemetry/api": "latest",
-    "@libsql/client-wasm": "latest",
-    "@electric-sql/pglite": "latest",
-    "@planetscale/database": "latest",
-    "@tidbcloud/serverless": "latest",
-    "@types/better-sqlite3": "latest",
-    "@aws-sdk/client-rds-data": "latest",
-    "@neondatabase/serverless": "latest",
-    "@cloudflare/workers-types": "latest",
-    "@op-engineering/op-sqlite": "latest",
+    "gel": "latest",
+    "@auth/core": "latest",
+    "nodemailer": "latest",
     "drizzle-orm": "latest",
     "nanoid": "latest",
-    "next-pwa": "latest"
+    "next-pwa": "latest",
+    "next-auth": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
