--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-menubar": "^1.1.4",
     "@radix-ui/react-navigation-menu": "^1.2.3",
-    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-popover": "latest",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
@@ -32,7 +32,7 @@
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-tabs": "latest",
     "@radix-ui/react-toast": "latest",
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
@@ -48,7 +48,7 @@
     "next": "15.1.0",
     "next-themes": "latest",
     "react": "^19",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "latest",
     "react-dom": "^19",
     "react-hook-form": "latest",
     "react-resizable-panels": "^2.1.7",
@@ -58,6 +58,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "zod": "latest",
+    "@auth/core": "latest",
+    "nodemailer": "latest",
     "@aws-sdk/client-rds-data": "latest",
     "@cloudflare/workers-types": "latest",
     "@electric-sql/pglite": "latest",
@@ -85,12 +87,10 @@
     "sql.js": "latest",
     "sqlite3": "latest",
     "gel": "latest",
-    "@auth/core": "latest",
-    "nodemailer": "latest",
+    "next-auth": "latest",
     "drizzle-orm": "latest",
     "nanoid": "latest",
     "next-pwa": "latest",
-    "next-auth": "latest",
     "bcryptjs": "latest",
     "@radix-ui/react-icons": "latest"
   },
